--- a/XChess.csproj
+++ b/XChess.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -54,6 +55,7 @@
     <Compile Include="Board.cs" />
     <Compile Include="BoardView.cs" />
     <Compile Include="MainWindow.cs" />
+    <Compile Include="Mesh.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="Piece.cs" />
