Better board selection

--- a/XChess.csproj
+++ b/XChess.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Move.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="Piece.cs" />
+    <Compile Include="PlayerBoardView.cs" />
     <Compile Include="Texture.cs" />
   </ItemGroup>
 </Project>
