--- a/XChess.csproj
+++ b/XChess.csproj
@@ -56,14 +56,16 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AI.cs" />
     <Compile Include="Board.cs" />
     <Compile Include="BoardView.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="MainWindow.cs" />
     <Compile Include="Mesh.cs" />
     <Compile Include="Move.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="Piece.cs" />
-    <Compile Include="PlayerBoardView.cs" />
+    <Compile Include="GameBoardView.cs" />
     <Compile Include="Texture.cs" />
   </ItemGroup>
 </Project>
